# oozextract

./: .gitignore  Cargo.toml  README.md  perf.Dockerfile
.github/workflows/: build.yml  release.yml
benches/: huffman.rs
src/: algorithm.rs  bit_reader.rs  bitknit.rs  core.rs  error.rs  huffman.rs  kraken.rs  leviathan.rs  lib.rs  lzna.rs  mermaid.rs  pointer.rs  tans.rs
src/algorithm/: bitknit.rs  kraken.rs  leviathan.rs  lzna.rs  mermaid.rs  mod.rs
src/core/: bit_reader.rs  error.rs  huffman.rs  mod.rs  pointer.rs  tans.rs
src/extractor/: mod.rs
