[package]
name = "oozextract"
description = "Open source Kraken / Mermaid / Selkie / Leviathan / LZNA / Bitknit decompressor"
repository = "https://github.com/lvlvllvlvllvlvl/oozextract"
version = "0.1.0"
edition = "2021"
license = "MIT"
exclude = ["testdata", "verify"]

[dependencies]
checked = { version = "0.5.0", optional = true }
log = "0.4.22"
num-traits = { version = "0.2.19", optional = true }
test-log = "0.2.16"

[features]
nightly = []
overflow_errors = ["dep:num-traits"]
checked = ["dep:checked"]
