[package]
name = "oozextract"
description = "Open source Kraken / Mermaid / Selkie / Leviathan / LZNA / Bitknit decompressor"
repository = "https://github.com/lvlvllvlvllvlvl/oozextract"
version = "0.1.3"
edition = "2021"
license = "MIT"
exclude = ["testdata", "verify"]

[dependencies]
log = "0.4.22"
test-log = "0.2.16"
wide = "0.7.28"

[features]
x86_sse = []
